--- a/engine/core/Cargo.toml
+++ b/engine/core/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "engine-core"
+name = "engine_core"
 version = "0.1.0"
 edition = "2021"
 
@@ -13,6 +13,7 @@ serde_json = "1.0.140"
 bson = "2.14.0"
 semver = { version = "1.0.26", features = ["serde"] }
 thiserror = "2.0.12"
+engine_macros = { path = "../../engine_macros" }
 
 [dev-dependencies]
 rstest = "0.18"
