--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,14 +5,21 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+  issues: write
+  pull-requests: write
+
 jobs:
   release:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: moonrepo/setup-rust@v1
+      - uses: actions/setup-node@v4
         with:
-          fetch-depth: 0
-      - name: Semantic Release
-        uses: cycjimmy/semantic-release-action@v4
+          node-version: 20
+      - run: npm ci
+      - run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
