--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "devDependencies": {
     "@semantic-release-cargo/semantic-release-cargo": "2.4.0",
     "@semantic-release/commit-analyzer": "^11.0.0",
+    "@semantic-release/exec": "^7.0.3",
     "@semantic-release/github": "^9.0.0",
     "@semantic-release/release-notes-generator": "^12.0.0",
-    "semantic-release": "^23.0.0"
+    "semantic-release": "^24.2.3"
   }
 }
