--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "mge-release",
   "private": true,
   "devDependencies": {
-    "@semantic-release-cargo/semantic-release-cargo": "2.4.0",
     "@semantic-release/commit-analyzer": "^11.0.0",
-    "@semantic-release/exec": "^7.0.3",
     "@semantic-release/github": "^9.0.0",
     "@semantic-release/release-notes-generator": "^12.0.0",
+    "@timada/semantic-release-cargo": "^1.0.7",
     "semantic-release": "^24.2.3"
   }
 }
