feat(scripting): migrate to generic Lua ECS component API

--- a/engine/core/Cargo.toml
+++ b/engine/core/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 hecs = "0.10"
-mlua = { version = "0.9", features = ["luajit"] }
+mlua = { version = "0.9", features = ["luajit", "serialize"] }
 serde = { version = "1.0", features = ["derive"] }
 schemars = { version = "0.8", features = ["derive"] }
 schemars_derive = "0.8"
