feat(cli): add mge-cli tool for ECS-aware Lua script execution
- Adds a new CLI binary `mge-cli` that runs Lua scripts with full ECS and mode support
- Reuses the scripting bridge from tests for CLI context
- Includes integration test for CLI script execution
- Ensures Clippy and compiler warnings are clean

--- a/engine/core/Cargo.toml
+++ b/engine/core/Cargo.toml
@@ -18,3 +18,7 @@ engine_macros = { path = "../../engine_macros" }
 [dev-dependencies]
 rstest = "0.18"
 mockall = "0.12"
+
+[[bin]]
+name = "mge-cli"
+path = "src/bin/mge_cli.rs"
