--- a/engine/core/Cargo.toml
+++ b/engine/core/Cargo.toml
@@ -14,6 +14,7 @@ bson = "2.14.0"
 semver = { version = "1.0.26", features = ["serde"] }
 thiserror = "2.0.12"
 engine_macros = { path = "../../engine_macros" }
+anyhow = "1.0.98"
 
 [dev-dependencies]
 rstest = "0.18"
