--- a/engine/core/Cargo.toml
+++ b/engine/core/Cargo.toml
@@ -15,6 +15,7 @@ semver = { version = "1.0.26", features = ["serde"] }
 thiserror = "2.0.12"
 engine_macros = { path = "../../engine_macros" }
 anyhow = "1.0.98"
+libloading = "0.8"
 
 [dev-dependencies]
 rstest = "0.18"
