--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,5 +18,10 @@ jobs:
         run: cargo fmt --all --check
       - name: Clippy
         run: cargo clippy --all-targets --all-features -- -D warnings
+      - name: Build test plugin
+        run: |
+          cargo build --manifest-path plugins/test_plugin/Cargo.toml --release
+          mkdir -p plugins
+          cp plugins/test_plugin/target/release/libtest_plugin.so plugins/
       - name: Test
         run: cargo test --all
