feat(schema-linter): initial schema validation implementation with tests
- Added schema_validator crate under engine/tools
- Implemented basic JSON schema validation:
  * Required "title" field
  * "modes" field validation against allowed modes
  * Property constraints check (minimum <= maximum)
- Added integration tests covering invalid schemas
- All tests passing and clippy clean

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,8 @@
 [workspace]
-members = ["engine/core", "engine_macros", "engine_py"]
+members = [
+  "engine/core",
+  "engine_macros",
+  "engine_py",
+  "engine/tools/schema_validator",
+]
 resolver = "3"
