--- a/engine/tools/schema_validator/Cargo.toml
+++ b/engine/tools/schema_validator/Cargo.toml
@@ -6,3 +6,8 @@ edition = "2024"
 [dependencies]
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+clap = { version = "4", features = ["derive"] }
+
+[[bin]]
+name = "schema_validator"
+path = "src/main.rs"
