--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,11 @@ jobs:
         run: cargo fmt --all --check
       - name: Clippy
         run: cargo clippy --all-targets --all-features -- -D warnings
-      - name: Build C test plugin
+      - name: Build all C plugins
         run: |
-          gcc -Iengine -shared -fPIC plugins/test_plugin.c -o plugins/libtest_plugin.so
+          for src in plugins/*.c; do
+            base=$(basename "$src" .c)
+            gcc -Iengine -shared -fPIC "$src" -o "plugins/lib${base}.so"
+          done
       - name: Test
         run: cargo test --all
