--- a/engine/core/Cargo.toml
+++ b/engine/core/Cargo.toml
@@ -18,6 +18,7 @@ anyhow = "1.0.98"
 libloading = "0.8"
 jsonschema = "0.16"
 once_cell = "1.21.3"
+indexmap = "2"
 
 [dev-dependencies]
 rstest = "0.18"
