--- a/engine/core/Cargo.toml
+++ b/engine/core/Cargo.toml
@@ -19,6 +19,7 @@ libloading = "0.8"
 jsonschema = "0.16"
 once_cell = "1.21.3"
 indexmap = "2"
+topo_sort = "0.4.0"
 
 [dev-dependencies]
 rstest = "0.18"
