--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,10 @@ jobs:
         with:
           components: rustfmt, clippy
 
+      # Lua Dependencies
+      - name: Install LuaJIT and pkg-config
+        run: sudo apt-get update && sudo apt-get install -y libluajit-5.1-dev pkg-config
+
       # Lua for Lua-Tests
       - name: Install Lua
         run: sudo apt-get update && sudo apt-get install -y lua5.1
