--- a/engine/core/Cargo.toml
+++ b/engine/core/Cargo.toml
@@ -25,6 +25,7 @@ toml = "0.8.22"
 rand = "0.9.1"
 strip-ansi-escapes = "0.2.1"
 gag = "1.0.0"
+regex = "1.11.1"
 
 [dev-dependencies]
 rstest = "0.18"
