--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Rust toolchain
-        uses: moonrepo/setup-rust@v1
+      - name: Install LuaJIT and pkg-config
+        run: sudo apt-get update && sudo apt-get install -y libluajit-5.1-dev pkg-config && sudo apt-get clean
+
+      - uses: moonrepo/setup-rust@v1
         with:
           components: rustfmt, clippy
 
@@ -21,13 +23,12 @@ jobs:
         run: cargo fmt --all --check
 
       - name: Clippy
-        run: cargo clippy --all-targets --all-features -- -D warnings
+        run: |
+          export PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig
+          cargo clippy --all-targets --all-features -- -D warnings
 
       - name: Clean up Rust build artifacts
         run: cargo clean
-
-      - name: Show disk usage after cleanup
-        run: df -h
 
   build-c-plugins:
     runs-on: ubuntu-latest
@@ -39,23 +40,34 @@ jobs:
 
       - name: Build all C plugins
         run: |
+          mkdir -p plugins/build
           for src in plugins/*.c; do
             base=$(basename "$src" .c)
-            gcc -Iengine -shared -fPIC "$src" -o "plugins/lib${base}.so"
+            gcc -Iengine -shared -fPIC "$src" -o "plugins/build/lib${base}.so"
           done
-        if: ${{ hashFiles('plugins/*.c') != '' }}
 
-      - name: Clean up build artifacts
-        run: rm -rf plugins/*.o plugins/*.so
-
-      - name: Show disk usage after cleanup
-        run: df -h
+      - name: Upload C plugins
+        uses: actions/upload-artifact@v4
+        with:
+          name: c-plugins
+          path: plugins/build/*.so
 
   test-rust:
     runs-on: ubuntu-latest
-    needs: [lint]
+    needs: [lint, build-c-plugins]
     steps:
       - uses: actions/checkout@v4
+
+      - name: Download C plugins
+        uses: actions/download-artifact@v4
+        with:
+          name: c-plugins
+          path: plugins/build
+
+      - name: Install LuaJIT and pkg-config
+        run: sudo apt-get update && sudo apt-get install -y libluajit-5.1-dev pkg-config && sudo apt-get clean
+
+      - uses: moonrepo/setup-rust@v1
 
       - name: Cache cargo registry and git
         uses: actions/cache@v4
@@ -67,36 +79,31 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-cargo-registry-
 
-      - name: Cache cargo target
-        uses: actions/cache@v4
-        with:
-          path: target
-          key: ${{ runner.os }}-cargo-target-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-target-
-
-      - name: Set up Rust toolchain
-        uses: moonrepo/setup-rust@v1
-
       - name: Build
-        run: cargo build --all
+        run: |
+          export PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig
+          cargo build --all
 
-      - name: Test
-        run: cargo test --all
+      - name: Test (with C plugins)
+        run: |
+          export PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig
+          export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$(pwd)/plugins/build
+          cargo test --all
 
       - name: Clean up Rust build artifacts
         run: cargo clean
 
-      - name: Remove Cargo registry source checkouts
-        run: rm -rf ~/.cargo/registry/src/*
-
-      - name: Show disk usage after cleanup
-        run: df -h
-
   test-lua:
     runs-on: ubuntu-latest
+    needs: build-c-plugins
     steps:
       - uses: actions/checkout@v4
+
+      - name: Download C plugins
+        uses: actions/download-artifact@v4
+        with:
+          name: c-plugins
+          path: plugins/build
 
       - name: Install LuaJIT and pkg-config
         run: sudo apt-get update && sudo apt-get install -y libluajit-5.1-dev pkg-config && sudo apt-get clean
@@ -105,28 +112,26 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y lua5.1 && sudo apt-get clean
 
       - name: Lua Tests
-        run: ./run_lua_tests.sh
-
-      - name: Show disk usage after tests
-        run: df -h
+        run: |
+          export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$(pwd)/plugins/build
+          ./run_lua_tests.sh
 
   test-python:
     runs-on: ubuntu-latest
+    needs: build-c-plugins
     steps:
       - uses: actions/checkout@v4
+
+      - name: Download C plugins
+        uses: actions/download-artifact@v4
+        with:
+          name: c-plugins
+          path: plugins/build
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.12"
-
-      - name: Cache pip
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('engine_py/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
 
       - name: Install Python dependencies
         run: |
@@ -139,14 +144,12 @@ jobs:
         run: |
           source .venv/bin/activate
           cd engine_py
+          export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$(pwd)/../plugins/build
           maturin develop
           pytest
 
       - name: Clean up Python venv
         run: rm -rf .venv
-
-      - name: Show disk usage after cleanup
-        run: df -h
 
   check-disk-space:
     runs-on: ubuntu-latest
