--- a/engine/core/Cargo.toml
+++ b/engine/core/Cargo.toml
@@ -26,6 +26,7 @@ rand = "0.9.1"
 strip-ansi-escapes = "0.2.1"
 gag = "1.0.0"
 regex = "1.11.1"
+parking_lot = "0.12"
 
 [dev-dependencies]
 rstest = "0.18"
