--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,9 +30,8 @@ jobs:
       - name: Clean up Rust build artifacts
         run: cargo clean
 
-  test-rust:
+  build:
     runs-on: ubuntu-latest
-    needs: [lint]
     steps:
       - uses: actions/checkout@v4
 
@@ -41,39 +40,40 @@ jobs:
 
       - uses: moonrepo/setup-rust@v1
 
-      - name: Cache cargo registry and git
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-registry-
-
       - name: Add wasm32-unknown-unknown target
         run: rustup target add wasm32-unknown-unknown
 
-      - name: Build all plugins and WASM test modules (Rust, C, WASM)
-        run: cargo run -p xtask -- build-all
+      - uses: Swatinem/rust-cache@v2
 
-      - name: Build
+      - name: Build all plugins and WASM test modules (Rust, C, WASM)
+        run: cargo run -p xtask -- build-all --release
+
+      - name: Build workspace (release)
         run: |
           export PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig
-          cargo build --all
+          cargo build --release --workspace
 
-      - name: Test (with plugins)
+      - name: Clean up Cargo build artifacts (optional, saves disk)
+        run: cargo clean
+
+  test-rust:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v4
+      - uses: moonrepo/setup-rust@v1
+      - uses: Swatinem/rust-cache@v2
+      - name: Test (with plugins, release)
         run: |
           export PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig
           export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$(pwd)/plugins
-          cargo test --all
-
+          cargo test --release --workspace
       - name: Clean up Rust build artifacts
         run: cargo clean
 
   test-lua:
     runs-on: ubuntu-latest
-    needs: test-rust
+    needs: build
     steps:
       - uses: actions/checkout@v4
 
@@ -90,7 +90,7 @@ jobs:
 
   test-python:
     runs-on: ubuntu-latest
-    needs: test-rust
+    needs: build
     steps:
       - uses: actions/checkout@v4
 
