--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,14 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
+      - name: Free up disk space
+        run: |
+          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
+          sudo docker image prune --all --force
+          sudo docker builder prune -a
+          sudo apt-get clean
+          df -h
+
       - uses: actions/checkout@v4
 
       - name: Install LuaJIT and pkg-config
@@ -27,12 +35,17 @@ jobs:
           export PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig
           cargo clippy --all-targets --all-features -- -D warnings
 
-      - name: Clean up Rust build artifacts
-        run: cargo clean
-
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Free up disk space
+        run: |
+          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
+          sudo docker image prune --all --force
+          sudo docker builder prune -a
+          sudo apt-get clean
+          df -h
+
       - uses: actions/checkout@v4
 
       - name: Install LuaJIT and pkg-config
@@ -53,21 +66,30 @@ jobs:
           export PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig
           cargo build --release --workspace
 
-      - name: Clean up Cargo build artifacts (optional, saves disk)
-        run: cargo clean
-
   test-rust:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: Free up disk space
+        run: |
+          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
+          sudo docker image prune --all --force
+          sudo docker builder prune -a
+          sudo apt-get clean
+          df -h
+
       - uses: actions/checkout@v4
+
       - uses: moonrepo/setup-rust@v1
+
       - uses: Swatinem/rust-cache@v2
+
       - name: Test (with plugins, release)
         run: |
           export PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig
           export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$(pwd)/plugins
           cargo test --release --workspace
+
       - name: Clean up Rust build artifacts
         run: cargo clean
 
@@ -75,6 +97,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: Free up disk space
+        run: |
+          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
+          sudo docker image prune --all --force
+          sudo docker builder prune -a
+          sudo apt-get clean
+          df -h
+
       - uses: actions/checkout@v4
 
       - name: Install LuaJIT and pkg-config
@@ -92,6 +122,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: Free up disk space
+        run: |
+          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
+          sudo docker image prune --all --force
+          sudo docker builder prune -a
+          sudo apt-get clean
+          df -h
+
       - uses: actions/checkout@v4
 
       - name: Install LuaJIT and pkg-config
