--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,6 +66,9 @@ jobs:
           export PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig
           cargo build --release --workspace
 
+      - name: Validate schemas
+        run: cargo run -p schema_validator
+
   test-rust:
     runs-on: ubuntu-latest
     needs: build
