--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,18 +10,7 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-      - name: Free up disk space
-        run: |
-          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
-          sudo docker image prune --all --force
-          sudo docker builder prune -a
-          sudo apt-get clean
-          df -h
-
       - uses: actions/checkout@v4
-
-      - name: Install LuaJIT and pkg-config
-        run: sudo apt-get update && sudo apt-get install -y libluajit-5.1-dev pkg-config && sudo apt-get clean
 
       - uses: moonrepo/setup-rust@v1
         with:
@@ -31,84 +20,129 @@ jobs:
         run: cargo fmt --all --check
 
       - name: Clippy
-        run: |
-          export PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig
-          cargo clippy --all-targets --all-features -- -D warnings
+        run: cargo clippy --all-targets --all-features -- -D warnings
 
-  build:
+      - name: Clean up Rust build artifacts
+        run: cargo clean
+
+  validate-schema:
     runs-on: ubuntu-latest
     steps:
-      - name: Free up disk space
-        run: |
-          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
-          sudo docker image prune --all --force
-          sudo docker builder prune -a
-          sudo apt-get clean
-          df -h
-
       - uses: actions/checkout@v4
+
+      - uses: moonrepo/setup-rust@v1
+
+      - name: Validate schemas (xtask via Makefile)
+        run: cargo run --bin schema_validator --release -- engine/assets/schemas
+
+  build-c-plugins:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install build-essential
+        run: sudo apt-get update && sudo apt-get install -y build-essential && sudo apt-get clean
+
+      - name: Build all C plugins (xtask via Makefile)
+        run: cargo run -p xtask -- build-c-plugins
+
+      - name: Upload C plugins
+        uses: actions/upload-artifact@v4
+        with:
+          name: c-plugins
+          path: plugins/*.so
+
+  build-wasm-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: moonrepo/setup-rust@v1
+        with:
+          targets: wasm32-unknown-unknown
+
+      - name: Build WASM test modules (xtask via Makefile)
+        run: cargo run -p xtask -- build-wasm-tests
+
+      - name: Upload WASM test artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: wasm-tests
+          path: engine/wasm_tests/**/*.wasm
+
+  build-all:
+    runs-on: ubuntu-latest
+    needs: [validate-schema, build-c-plugins, build-wasm-tests]
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: moonrepo/setup-rust@v1
 
       - name: Install LuaJIT and pkg-config
         run: sudo apt-get update && sudo apt-get install -y libluajit-5.1-dev pkg-config && sudo apt-get clean
 
-      - uses: moonrepo/setup-rust@v1
+      - name: Download C plugins
+        uses: actions/download-artifact@v4
+        with:
+          name: c-plugins
+          path: plugins
 
-      - name: Add wasm32-unknown-unknown target
-        run: rustup target add wasm32-unknown-unknown
+      - name: Download WASM test artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: wasm-tests
+          path: engine/wasm_tests
 
-      - uses: Swatinem/rust-cache@v2
+      - name: Build all (xtask via Makefile)
+        run: cargo run -p xtask -- build-all
 
-      - name: Build all plugins and WASM test modules (Rust, C, WASM)
-        run: cargo run -p xtask -- build-all --release
-
-      - name: Build workspace (release)
-        run: |
-          export PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig
-          cargo build --release --workspace
-
-      - name: Validate schemas
-        run: cargo run -p schema_validator
+      - name: Clean up Rust build artifacts
+        run: cargo clean
 
   test-rust:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build-all
     steps:
-      - name: Free up disk space
-        run: |
-          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
-          sudo docker image prune --all --force
-          sudo docker builder prune -a
-          sudo apt-get clean
-          df -h
-
       - uses: actions/checkout@v4
 
       - uses: moonrepo/setup-rust@v1
 
-      - uses: Swatinem/rust-cache@v2
+      - name: Install LuaJIT and pkg-config
+        run: sudo apt-get update && sudo apt-get install -y libluajit-5.1-dev pkg-config && sudo apt-get clean
 
-      - name: Test (with plugins, release)
+      - name: Download C plugins
+        uses: actions/download-artifact@v4
+        with:
+          name: c-plugins
+          path: plugins
+
+      - name: Download WASM test artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: wasm-tests
+          path: engine/wasm_tests
+
+      - name: Test Rust (xtask via Makefile)
         run: |
           export PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig
           export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$(pwd)/plugins
-          cargo test --release --workspace
+          cargo run -p xtask -- build-all
+          cargo test --all
 
       - name: Clean up Rust build artifacts
         run: cargo clean
 
   test-lua:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build-c-plugins
     steps:
-      - name: Free up disk space
-        run: |
-          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
-          sudo docker image prune --all --force
-          sudo docker builder prune -a
-          sudo apt-get clean
-          df -h
-
       - uses: actions/checkout@v4
+
+      - name: Download C plugins
+        uses: actions/download-artifact@v4
+        with:
+          name: c-plugins
+          path: plugins
 
       - name: Install LuaJIT and pkg-config
         run: sudo apt-get update && sudo apt-get install -y libluajit-5.1-dev pkg-config && sudo apt-get clean
@@ -116,24 +150,20 @@ jobs:
       - name: Install Lua
         run: sudo apt-get update && sudo apt-get install -y lua5.1 && sudo apt-get clean
 
-      - name: Lua Tests
-        run: |
-          export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$(pwd)/plugins
-          ./run_lua_tests.sh
+      - name: Lua tests (xtask via Makefile)
+        run: ./run_lua_tests.sh
 
   test-python:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build-c-plugins
     steps:
-      - name: Free up disk space
-        run: |
-          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
-          sudo docker image prune --all --force
-          sudo docker builder prune -a
-          sudo apt-get clean
-          df -h
-
       - uses: actions/checkout@v4
+
+      - name: Download C plugins
+        uses: actions/download-artifact@v4
+        with:
+          name: c-plugins
+          path: plugins
 
       - name: Install LuaJIT and pkg-config
         run: sudo apt-get update && sudo apt-get install -y libluajit-5.1-dev pkg-config && sudo apt-get clean
