--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,7 +73,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: wasm-tests
-          path: engine/wasm_tests/**/*.wasm
+          path: engine_wasm/wasm_tests/**/*.wasm
 
   build-all:
     runs-on: ubuntu-latest
