--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,7 +56,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: c-plugins
-          path: plugins/*.so
+          path: plugins/*/*.so
 
   build-wasm-tests:
     runs-on: ubuntu-latest
