--- a/engine_py/Cargo.toml
+++ b/engine_py/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "mge"
+name = "engine_py"
 version = "0.1.0"
 edition = "2024"
 
@@ -7,9 +7,9 @@ edition = "2024"
 crate-type = ["cdylib"]
 
 [dependencies]
+engine_core = { path = "../engine/core" }
 pyo3 = { version = "0.24", features = ["extension-module"] }
 serde_json = "1.0"
 serde-pyobject = "0.6.2"
 once_cell = "1.21"
-engine_core = { path = "../engine/core" }
 pythonize = "0.24"
