--- a/engine/core/Cargo.toml
+++ b/engine/core/Cargo.toml
@@ -24,6 +24,7 @@ toml = "0.8.23"
 rand = "0.9.1"
 parking_lot = "0.12"
 walkdir = "2.5.0"
+lazy_static = "1.4"
 
 [dev-dependencies]
 tempfile = "3.20.0"
