--- a/engine/core/Cargo.toml
+++ b/engine/core/Cargo.toml
@@ -25,6 +25,7 @@ rand = "0.9.1"
 parking_lot = "0.12"
 walkdir = "2.5.0"
 lazy_static = "1.4"
+dyn-clone = "1.0.19"
 
 [dev-dependencies]
 tempfile = "3.20.0"
