--- a/engine/tools/schema_validator/Cargo.toml
+++ b/engine/tools/schema_validator/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 serde_json = "1"
 clap = { version = "4", features = ["derive"] }
+toml = "0.8.23"
 
 [[bin]]
 name = "schema_validator"
