--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install build-essential
-        run: sudo apt-get update && sudo apt-get install -y build-essential && sudo apt-get clean
+        run: sudo apt-get update && sudo apt-get install -y build-essential libjansson-dev && sudo apt-get clean
 
       - name: Build all C plugins (xtask via Makefile)
         run: cargo run -p xtask -- build-c-plugins
