ci(tests): ensure plugin binary exists before subprocess tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -122,35 +122,29 @@ jobs:
     needs: build-all
     steps:
       - uses: actions/checkout@v4
-
       - uses: moonrepo/setup-rust@v1
-
       - name: Install wasm32-unknown-unknown target
         run: rustup target add wasm32-unknown-unknown
-
       - name: Install LuaJIT and pkg-config
         run: sudo apt-get update && sudo apt-get install -y libluajit-5.1-dev pkg-config && sudo apt-get clean
-
       - name: Set PKG_CONFIG_PATH
         run: echo "PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig" >> $GITHUB_ENV
-
       - name: Download C plugins
         uses: actions/download-artifact@v4
         with:
           name: c-plugins
           path: plugins
-
       - name: Download WASM test artifacts
         uses: actions/download-artifact@v4
         with:
           name: wasm-tests
           path: engine_wasm/wasm_tests
-
+      - name: Build and deploy plugins
+        run: cargo run -p xtask -- build-plugins
       - name: Test Rust
         run: |
           export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$(pwd)/plugins
           cargo test --all
-
       - name: Clean up Rust build artifacts
         run: cargo clean
 
