--- a/engine_lua/Cargo.toml
+++ b/engine_lua/Cargo.toml
@@ -9,6 +9,7 @@ mlua = { version = "0.10.5", features = ["luajit", "serialize"] }
 serde_json = "1.0.140"
 gag = "1.0.0"
 regex = "1.11.1"
+lazy_static = "1.4"
 
 [dev-dependencies]
 tempfile = "3.20.0"
