--- a/engine_lua/Cargo.toml
+++ b/engine_lua/Cargo.toml
@@ -10,6 +10,7 @@ serde_json = "1.0.140"
 gag = "1.0.0"
 regex = "1.11.1"
 lazy_static = "1.4"
+once_cell = "1.21.3"
 
 [dev-dependencies]
 tempfile = "3.20.0"
