--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ target/
 
 # Project-specific
 test_save.json
+test_job_event_log.json
 
 # Plugins: ignore build artifacts in all subfolders
 plugins/*/*.so
