--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "mge-release",
   "private": true,
   "devDependencies": {
-    "@semantic-release/commit-analyzer": "^11.0.0",
-    "@semantic-release/github": "^9.0.0",
-    "@semantic-release/release-notes-generator": "^12.0.0",
+    "@semantic-release/commit-analyzer": "^13.0.1",
+    "@semantic-release/github": "^12.0.2",
+    "@semantic-release/release-notes-generator": "^14.1.0",
     "@timada/semantic-release-cargo": "^1.0.7",
+    "npm-check-updates": "^19.1.2",
     "semantic-release": "^25.0.2"
   }
 }
